my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EREGNSZ/EREGNSZ.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EREGNSZ.dml:11:5: error EREGNSZ: undefined register size for 'b.r'
